--- a/app/src/main/res/layout/row_movies.xml
+++ b/app/src/main/res/layout/row_movies.xml
@@ -24,9 +24,9 @@
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="xyz"
+            android:text="@string/movie_name"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@+id/image"
             app:layout_constraintTop_toBottomOf="@+id/image"
             android:layout_margin="10dp"
